--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -24,8 +24,8 @@ builds:
         -X {{.Env.GO_PACKAGE}}/vendor/github.com/percona/pmm/version.FullCommit={{.Env.PMM_RELEASE_FULLCOMMIT}}
         -X {{.Env.GO_PACKAGE}}/vendor/github.com/percona/pmm/version.Branch={{.Env.PMM_RELEASE_BRANCH}}
         -X {{.Env.GO_PACKAGE}}/vendor/github.com/prometheus/common/version.BuildUser={{.Env.USER}}@{{.Env.TRAVIS_APP_HOST}}
-archive:
-  name_template: "{{ .ProjectName }}-{{ .Env.APP_VERSION }}.{{ .Os }}-{{ .Arch }}"
+archives:
+  - name_template: "{{ .ProjectName }}-{{ .Env.APP_VERSION }}.{{ .Os }}-{{ .Arch }}"
 checksum:
   name_template: '{{ .ProjectName }}-{{ .Env.APP_VERSION }}-checksums.txt'
 snapshot:
@@ -34,7 +34,7 @@ changelog:
   skip: true
 release:
   github:
-    owner: percona
+    owner: bugsnag
     name: mongodb_exporter
   draft: true
   prerelease: auto
